# VaultToEPUB

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/vaulttoepub/: __init__.py  obsidian_classes.py  vtoepub.py
tests/examples/: one.md  one.xhtml  two.md
tests/examples_temp/: one.xhtml  two.xhtml
vaulttoepub/: vtoepub.py
